<resources>
    <string name="app_name">MyCatalogueUIUX</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="anton_hartanto">Anton Hartanto</string>
    <string name="anton_hartanto60_gmail_com">anton.hartanto60@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_film">Title Film</string>
    <string name="overview_film">Overview Film</string>
    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="click_me_to_see_the_awesomeness">Click Me to See The Awesomeness</string>
    <string name="hello_anton">Hello Anton!</string>
    <string name="cari_film">Search Film</string>
    <string name="cari">Search</string>
    <string name="film_name2">Film Name</string>
    <string name="synopsis">Synopsis</string>
    <string name="date_and_time">Date and Time</string>
    <string name="language">Language :</string>
    <string name="subs">Subs</string>
    <string name="average">Average :</string>
    <string name="date">Date :</string>
    <string name="film_name">Film Name</string>
    <string name="synopsiss">Synopsis :</string>
    <string name="isi_synopsis">Isi Synopsis</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="language_setting">Language</string>
</resources>
