<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivSearchDetailImageFilm"
            android:layout_width="130dp"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/tvSearchDetailLanguageFilm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subs"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/average"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/tvSearchDetailAverageFilm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/tvSearchDetailDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvSearchDetailNameFilm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/film_name"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/synopsiss"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/tvSearchDetailSynopsisFilm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/isi_synopsis" />
</LinearLayout>