<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlSearchItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/ivSearchImageFilm"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />
    <TextView
        android:id="@+id/tvSearchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ivSearchImageFilm"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:textStyle="bold"
        android:textSize="18sp"
        tools:text="@string/film_name"/>

    <TextView
        android:id="@+id/tvSearchOverviewFilm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ivSearchImageFilm"
        android:layout_below="@id/tvSearchTitle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_centerVertical="true"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="16sp"
        tools:text="@string/overview_film" />

    <TextView
        android:id="@+id/tvSearchDateTimeFilm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/ivSearchImageFilm"
        android:layout_below="@+id/tvSearchOverviewFilm"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        tools:text="@string/date_and_time"/>

</RelativeLayout>