<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewNowPlaying"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ivPosterFilm"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="4dp"
            android:src="@color/colorPrimaryDark" />
        <TextView
            android:id="@+id/tvTitleFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivPosterFilm"
            android:layout_toEndOf="@id/ivPosterFilm"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/title_film"
            android:maxLines="2"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />
        <TextView
            android:id="@+id/tvOverviewFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivPosterFilm"
            android:layout_toEndOf="@id/ivPosterFilm"
            android:layout_below="@+id/tvTitleFilm"
            android:textSize="16sp"
            android:text="@string/overview_film"
            android:maxLines="2"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />
        <TextView
            android:id="@+id/tvDateTimeFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivPosterFilm"
            android:layout_toEndOf="@id/ivPosterFilm"
            android:layout_below="@+id/tvOverviewFilm"
            android:textSize="16sp"
            android:text="@string/overview_film"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/ivPosterFilm"
            android:layout_toEndOf="@id/ivPosterFilm"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textSize="12sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textSize="12sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_weight="1" />

        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>